Added Dockerfile contents, auth configurations

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,8 @@ spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
 # Because detection is disabled you have to set correct dialect by hand.
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
 
+security.oauth2.resource.user-info-uri=http://localhost:8901/auth/user
+
 
 #https://jaxenter.com/spring-boot-tutorial-microservices-kubernetes-part-2-135518.html
 #https://www.logicbig.com/tutorials/java-ee-tutorial/jpa/table-generator.html
