Added service interfaces

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,10 @@ spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
 # Because detection is disabled you have to set correct dialect by hand.
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
 
-security.oauth2.resource.user-info-uri=http://localhost:8901/auth/user
+#security.oauth2.resource.user-info-uri=http://localhost:8901/auth/user
+
+spring.security.user.name=user
+spring.security.user.password=password
 
 
 #https://jaxenter.com/spring-boot-tutorial-microservices-kubernetes-part-2-135518.html
@@ -23,3 +26,4 @@ security.oauth2.resource.user-info-uri=http://localhost:8901/auth/user
 
 # Data
 # https://ai.fmcsa.dot.gov/SMS/Tools/Downloads.aspx
+
