--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,3 +27,12 @@ spring.security.user.password=password
 # Data
 # https://ai.fmcsa.dot.gov/SMS/Tools/Downloads.aspx
 
+spring.mail.host=email-smtp.us-west-2.amazonaws.com
+spring.mail.username=username
+spring.mail.password=password
+spring.mail.properties.mail.transport.protocol=smtp
+spring.mail.properties.mail.smtp.port=25
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+
