--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,13 +26,12 @@ spring.security.user.password=password
 
 # Data
 # https://ai.fmcsa.dot.gov/SMS/Tools/Downloads.aspx
+# lmzffryuureaxlmj
 
-spring.mail.host=email-smtp.us-west-2.amazonaws.com
-spring.mail.username=username
-spring.mail.password=password
-spring.mail.properties.mail.transport.protocol=smtp
-spring.mail.properties.mail.smtp.port=25
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=buckocee
+spring.mail.password=lmzffryuureaxlmj
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
-spring.mail.properties.mail.smtp.starttls.required=true
 
