--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,10 +28,22 @@ spring.security.user.password=password
 # https://ai.fmcsa.dot.gov/SMS/Tools/Downloads.aspx
 # lmzffryuureaxlmj
 
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=buckocee
-spring.mail.password=lmzffryuureaxlmj
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
+#spring.mail.host=smtp.gmail.com
+#spring.mail.port=587
+#spring.mail.username=buckocee
+#spring.mail.password=lmzffryuureaxlmj
+#spring.mail.properties.mail.smtp.auth=true
+#spring.mail.properties.mail.smtp.starttls.enable=true
+
+# Email (MailProperties)
+spring.mail.host=localhost
+#spring.mail.port=587
+#spring.mail.username=
+#spring.mail.password=
+spring.mail.default-encoding=UTF-8
+#spring.mail.properties.*= # properties to set on the JavaMail session
+
+app.url=localhost
+app.email.support=eri@localhost
+app.email.from=eri@localhost
 
