Added email support. Confirmed registration email getting sent

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -47,3 +47,9 @@ app.url=localhost
 app.email.support=eri@localhost
 app.email.from=eri@localhost
 
+server.port=8443
+server.ssl.key-store=keystore.p12
+server.ssl.key-store-password=Mp1d4s84!!
+server.ssl.keyStoreType=PKCS12
+server.ssl.keyAlias=tomcat
+
