--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 # Disable feature detection by this undocumented parameter. Check the org.hibernate.engine.jdbc.internal.JdbcServiceImpl.configure method for more details.
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
 
-spring.jpa.properties.hibernate.default_schema=ref_data
+#spring.jpa.properties.hibernate.default_schema=ref_data
 
 # Because detection is disabled you have to set correct dialect by hand.
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
@@ -48,7 +48,7 @@ spring.mail.default-encoding=UTF-8
 app.url=localhost
 app.email.support=eri@localhost
 app.email.from=eri@localhost
-
+#SSL Certificate config
 server.port=8443
 server.ssl.key-store=keystore.p12
 server.ssl.key-store-password=Mp1d4s84!!
