--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,7 @@
         <dependency>
             <groupId>org.springframework.social</groupId>
             <artifactId>spring-social-facebook</artifactId>
+            <version>2.0.3.RELEASE</version>
         </dependency>
     </dependencies>
 
