Updated port in application.properties to use environment variable

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -49,7 +49,7 @@ app.url=localhost
 app.email.support=eri@localhost
 app.email.from=eri@localhost
 #SSL Certificate config
-server.port=8443
+server.port=${PORT}
 server.ssl.key-store=keystore.p12
 server.ssl.key-store-password=Mp1d4s84!!
 server.ssl.keyStoreType=PKCS12
