--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -49,9 +49,11 @@ app.url=localhost
 app.email.support=eri@localhost
 app.email.from=eri@localhost
 #SSL Certificate config
-server.port=${PORT}
+server.port=8443
 server.ssl.key-store=keystore.p12
 server.ssl.key-store-password=Mp1d4s84!!
 server.ssl.keyStoreType=PKCS12
 server.ssl.keyAlias=tomcat
+spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
+server.servlet.context-path=/api/v1
 
