Added sendgrid to the email service

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -46,7 +46,7 @@ spring.mail.default-encoding=UTF-8
 #spring.mail.properties.*= # properties to set on the JavaMail session
 
 app.url=localhost
-app.email.support=eri@localhost
+app.email.support=support@silvershieldcapital.com
 app.email.from=eri@localhost
 #SSL Certificate config
 server.port=8443
@@ -56,4 +56,5 @@ server.ssl.keyStoreType=PKCS12
 server.ssl.keyAlias=tomcat
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
 server.servlet.context-path=/api/v1
+spring.sendgrid.api-key=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
 
