--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,11 @@
             <artifactId>spring-security-oauth2</artifactId>
             <version>2.2.1.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>com.sendgrid</groupId>
+            <artifactId>sendgrid-java</artifactId>
+            <version>4.3.0</version>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
