Updated security settings

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -44,8 +44,7 @@ spring.mail.host=localhost
 #spring.mail.password=
 spring.mail.default-encoding=UTF-8
 #spring.mail.properties.*= # properties to set on the JavaMail session
-
-app.url=localhost
+app.url=http://localhost:4200
 app.email.support=support@silvershieldcapital.com
 app.email.from=eri@localhost
 #SSL Certificate config
