disabled self-signed certificate

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -49,10 +49,10 @@ app.email.support=support@silvershieldcapital.com
 app.email.from=eri@localhost
 #SSL Certificate config
 server.port=8443
-server.ssl.key-store=keystore.p12
-server.ssl.key-store-password=Mp1d4s84!!
-server.ssl.keyStoreType=PKCS12
-server.ssl.keyAlias=tomcat
+#server.ssl.key-store=keystore.p12
+#server.ssl.key-store-password=Mp1d4s84!!
+#server.ssl.keyStoreType=PKCS12
+#server.ssl.keyAlias=tomcat
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
 server.servlet.context-path=/api/v1
 spring.sendgrid.api-key=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
