--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -48,7 +48,7 @@ app.url=http://localhost:4200
 app.email.support=support@silvershieldcapital.com
 app.email.from=eri@localhost
 #SSL Certificate config
-server.port=8443
+#server.port=8443
 #server.ssl.key-store=keystore.p12
 #server.ssl.key-store-password=Mp1d4s84!!
 #server.ssl.keyStoreType=PKCS12
