--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,10 @@
             <artifactId>spring-security-oauth2</artifactId>
             <version>2.2.1.RELEASE</version>
         </dependency>
+      <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-data-redis</artifactId>
+      </dependency>
         <dependency>
             <groupId>com.sendgrid</groupId>
             <artifactId>sendgrid-java</artifactId>
