Got it running again. Still needs clean-up

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.jpa.database=POSTGRESQL
 spring.jpa.hibernate.ddl-auto=none
 
-spring.datasource.url=jdbc:postgresql://buckocee.com/silvershield
+spring.datasource.url=jdbc:postgresql://localhost:5433/silvershield
 spring.datasource.username=ssc
-spring.datasource.password=ssc
+spring.datasource.password=sscapp
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Disable feature detection by this undocumented parameter. Check the org.hibernate.engine.jdbc.internal.JdbcServiceImpl.configure method for more details.
@@ -18,7 +18,6 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
 
 spring.security.user.name=user
 spring.security.user.password=password
-
 
 #https://jaxenter.com/spring-boot-tutorial-microservices-kubernetes-part-2-135518.html
 #https://www.logicbig.com/tutorials/java-ee-tutorial/jpa/table-generator.html
@@ -36,17 +35,17 @@ spring.security.user.password=password
 #spring.mail.password=lmzffryuureaxlmj
 #spring.mail.properties.mail.smtp.auth=true
 #spring.mail.properties.mail.smtp.starttls.enable=true
-
 # Email (MailProperties)
 spring.mail.host=localhost
+spring.application.name=ssc-api
 #spring.mail.port=587
 #spring.mail.username=
 #spring.mail.password=
 spring.mail.default-encoding=UTF-8
 #spring.mail.properties.*= # properties to set on the JavaMail session
-app.url=http://localhost:4200
-app.email.support=support@silvershieldcapital.com
-app.email.from=eri@localhost
+ssc.client.url=http://localhost:4200
+ssc.email.support=support@silvershieldcapital.com
+ssc.email.from=eri@localhost
 #SSL Certificate config
 #server.port=8443
 #server.ssl.key-store=keystore.p12
@@ -56,4 +55,6 @@ app.email.from=eri@localhost
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
 server.servlet.context-path=/api/v1
 spring.sendgrid.api-key=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
-
+app.url=
+app.email.from=
+app.email.support=
