--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,15 +4,16 @@ spring.jpa.hibernate.ddl-auto=none
 spring.datasource.url=jdbc:postgresql://localhost:5433/silvershield
 spring.datasource.username=ssc
 spring.datasource.password=sscapp
-spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
+spring.jpa.properties.hibernate.jdbc.batch_size=100
+spring.jpa.properties.hibernate.order_inserts=true
 
 # Disable feature detection by this undocumented parameter. Check the org.hibernate.engine.jdbc.internal.JdbcServiceImpl.configure method for more details.
-spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
+#spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
 
 #spring.jpa.properties.hibernate.default_schema=ref_data
-
-# Because detection is disabled you have to set correct dialect by hand.
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
 
 #security.oauth2.resource.user-info-uri=http://localhost:8901/auth/user
 
@@ -58,3 +59,5 @@ spring.sendgrid.api-key=SG.4umX3lgmS26n6nhHM4vDjg.2pAWFl-VvV6vElhrQFhLrhgiw6PsZB
 app.url=
 app.email.from=
 app.email.support=
+app.nhtsa.webkey=f8a4a6e6b0ed40576bc3b7458517de7453c71d10
+
