Fixed Oauth2 configuration, able to get tokens and call APIs

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.jpa.database=POSTGRESQL
 spring.jpa.hibernate.ddl-auto=none
-
+logging.level.root=DEBUG
 spring.datasource.url=jdbc:postgresql://localhost:5433/silvershield
 spring.datasource.username=ssc
 spring.datasource.password=sscapp
@@ -15,8 +15,8 @@ spring.jpa.properties.hibernate.order_inserts=true
 #security.oauth2.resource.user-info-uri=http://localhost:8901/auth/user
 #spring.security.oauth2.resourceserver.jwt.issuer-uri: https://localhost:8080/api/v1/oauth/token
 #spring.main.allow-bean-definition-overriding=true
-spring.security.oauth2.resourceserver.opaquetoken.client-id=android
-spring.security.oauth2.resourceserver.opaquetoken.client-secret=secret
+#spring.security.oauth2.resourceserver.opaquetoken.client-id=android
+#spring.security.oauth2.resourceserver.opaquetoken.client-secret=secret
 spring.main.allow-bean-definition-overriding=true
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
